fix meta-wrap fuatured carousel

--- a/docroot/sites/usanetwork/themes/aurora_usa/sass/design/modules/_home-featured.scss
+++ b/docroot/sites/usanetwork/themes/aurora_usa/sass/design/modules/_home-featured.scss
@@ -77,6 +77,7 @@
           height: 40%;
           position: absolute;
           width: 100%;
+          z-index: 1;
           @include breakpoint($bp-480-width) {
             height: 42%;
           }
